--- a/wooting-analog-midi-core/Cargo.toml
+++ b/wooting-analog-midi-core/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-midir = "0.9"
+midir = "0.10"
 wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk", branch = "develop", features = ["serdes"] }
 log = "0.4"
 lazy_static = "1.4"
-serde = { version = "1.0", features = ["derive"] }
+# serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
